line endings, standardising button styles

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -4,6 +4,8 @@
   --text: #000;
   --footer--bg: #211f30;
   --footer--text: #fff;
+  --button--before: #d1d1d1;
+  --button--after: #7e7e7e;
 }
 
 // Dark Mode
