--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,36 +1,80 @@
 @import '../App/App.scss';
 
-$shadow: 0.3rem 0.3rem 0.6rem $greyLight-2, -0.2rem -0.2rem 0.5rem $white;
-$inner-shadow: inset 0.2rem 0.2rem 0.5rem $greyLight-2,
-  inset -0.2rem -0.2rem 0.5rem $white;
+.toggle {
+  cursor: pointer;
+  background-color: transparent;
+  outline: none;
+  color: var(--text);
+  padding: 5px;
+  border: none;
+  width: 100%;
+  will-change: transform;
+  align-content: center;
+  display: flex;
+  justify-content: center;
 
-.icon {
-  &-theme {
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
-    box-shadow: $shadow;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    background-color: $greyDark;
-    transition: all 0.5s ease;
+  &::before {
+    border-radius: 8px;
+    content: '';
+    position: absolute;
+    top: 10px;
+    right: 0;
+    bottom: -6px;
+    left: 0;
+    z-index: -1;
+  }
+
+  &::after {
+    content: '';
+    border-radius: 8px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
   }
 }
 
-.icon-theme > img {
+.toggle > img {
   width: 100%;
   height: 100%;
-  margin: 5px;
 }
 
-.check:checked + .icon-theme,
-.icon-theme:hover {
-  box-shadow: $inner-shadow;
+.check:checked + .toggle,
+.toggle:hover {
+  box-shadow: $white;
   background-color: $white;
 }
 
 .check {
   display: none;
+}
+
+/*.btn:focus,*/
+.toggle:hover {
+  transform: translateY(2px);
+}
+
+/*.btn:focus:before,*/
+.toggle:hover:before {
+  transform: translateY(-2px);
+}
+
+.toggle:active {
+  transform: translateY(8px);
+  transition: none;
+}
+.toggle:active:before {
+  transform: translateY(-8px);
+  transition: none;
+}
+
+.toggle {
+  &::before {
+    background-color: var(--button--before);
+  }
+  &::after {
+    background-color: var(--button--after);
+  }
 }
