--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -4,6 +4,8 @@
   --text: #000;
   --footer--bg: #211f30;
   --footer--text: #fff;
+  --grey--before: #d1d1d1;
+  --grey--after: #7e7e7e;
 }
 
 // Dark Mode
@@ -12,6 +14,8 @@
   --text: #b8b8b8;
   --footer--bg: #000;
   --footer--text: #fff;
+  --grey--before: #63626e;
+  --grey--after: #42414a;
 }
 
 // Font settings
@@ -58,6 +62,11 @@ $mobOuterPadding: 0px 10% 30px 10%;
 }
 
 body {
+  background-color: var(--bg);
+}
+
+.page {
+  margin-top: -80px;
   background-color: var(--bg);
 }
 
