--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -32,7 +32,25 @@ $inner-shadow: inset 0.2rem 0.2rem 0.5rem $greyLight-2,
   margin: 5px;
 }
 
-.icon-blog:hover {
-  box-shadow: $inner-shadow;
-  background-color: $white;
+/*.btn:focus:before,*/
+.btn:hover:before {
+  transform: translateY(-2px);
+}
+
+.btn:active {
+  transform: translateY(8px);
+  transition: none;
+}
+.btn:active:before {
+  transform: translateY(-8px);
+  transition: none;
+}
+
+.btn {
+  &::before {
+    background-color: var(--grey--before);
+  }
+  &::after {
+    background-color: var(--grey--after);
+  }
 }
