--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,48 +1,97 @@
 @import '../App/App.scss';
 
-.navbar {
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+9,ffffff+17,ffffff+100&1+0,0.95+66,0.9+84,0.5+91,0.2+96,0+100 */
-  background: -moz-linear-gradient(
-    top,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 0.99) 9%,
-    rgba(255, 255, 255, 0.98) 17%,
-    rgba(255, 255, 255, 0.95) 66%,
-    rgba(255, 255, 255, 0.9) 84%,
-    rgba(255, 255, 255, 0.5) 91%,
-    rgba(255, 255, 255, 0.2) 96%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    top,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 0.99) 9%,
-    rgba(255, 255, 255, 0.98) 17%,
-    rgba(255, 255, 255, 0.95) 66%,
-    rgba(255, 255, 255, 0.9) 84%,
-    rgba(255, 255, 255, 0.5) 91%,
-    rgba(255, 255, 255, 0.2) 96%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 0.99) 9%,
-    rgba(255, 255, 255, 0.98) 17%,
-    rgba(255, 255, 255, 0.95) 66%,
-    rgba(255, 255, 255, 0.9) 84%,
-    rgba(255, 255, 255, 0.5) 91%,
-    rgba(255, 255, 255, 0.2) 96%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=0);
-  /* IE6-9 */
-  position: sticky;
-  top: 0;
-  z-index: 2;
+[data-theme='light'] {
+  .navbar {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+9,ffffff+17,ffffff+100&1+0,0.95+66,0.9+84,0.5+91,0.2+96,0+100 */
+    background: -moz-linear-gradient(
+      top,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0.99) 9%,
+      rgba(255, 255, 255, 0.98) 17%,
+      rgba(255, 255, 255, 0.95) 66%,
+      rgba(255, 255, 255, 0.9) 84%,
+      rgba(255, 255, 255, 0.5) 91%,
+      rgba(255, 255, 255, 0.2) 96%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(
+      top,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0.99) 9%,
+      rgba(255, 255, 255, 0.98) 17%,
+      rgba(255, 255, 255, 0.95) 66%,
+      rgba(255, 255, 255, 0.9) 84%,
+      rgba(255, 255, 255, 0.5) 91%,
+      rgba(255, 255, 255, 0.2) 96%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0.99) 9%,
+      rgba(255, 255, 255, 0.98) 17%,
+      rgba(255, 255, 255, 0.95) 66%,
+      rgba(255, 255, 255, 0.9) 84%,
+      rgba(255, 255, 255, 0.5) 91%,
+      rgba(255, 255, 255, 0.2) 96%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=0);
+    /* IE6-9 */
+    position: sticky;
+    top: 0;
+    z-index: 2;
+  }
+}
+
+[data-theme='dark'] {
+  .navbar {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+9,ffffff+17,ffffff+100&1+0,0.95+66,0.9+84,0.5+91,0.2+96,0+100 */
+    background: -moz-linear-gradient(
+      top,
+      rgba(33, 31, 48, 1) 0%,
+      rgba(33, 31, 48, 0.98) 9%,
+      rgba(33, 31, 48, 0.97) 17%,
+      rgba(33, 31, 48, 0.93) 66%,
+      rgba(33, 31, 48, 0.85) 84%,
+      rgba(33, 31, 48, 0.4) 91%,
+      rgba(33, 31, 48, 0.2) 96%,
+      rgba(33, 31, 48, 0) 100%
+    );
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(
+      top,
+      rgba(33, 31, 48, 1) 0%,
+      rgba(33, 31, 48, 0.98) 9%,
+      rgba(33, 31, 48, 0.97) 17%,
+      rgba(33, 31, 48, 0.93) 66%,
+      rgba(33, 31, 48, 0.85) 84%,
+      rgba(33, 31, 48, 0.4) 91%,
+      rgba(33, 31, 48, 0.2) 96%,
+      rgba(33, 31, 48, 0) 100%
+    );
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(
+      to bottom,
+      rgba(33, 31, 48, 1) 0%,
+      rgba(33, 31, 48, 0.98) 9%,
+      rgba(33, 31, 48, 0.97) 17%,
+      rgba(33, 31, 48, 0.93) 66%,
+      rgba(33, 31, 48, 0.85) 84%,
+      rgba(33, 31, 48, 0.4) 91%,
+      rgba(33, 31, 48, 0.2) 96%,
+      rgba(33, 31, 48, 0) 100%
+    );
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=0);
+    /* IE6-9 */
+    position: sticky;
+    top: 0;
+    z-index: 2;
+  }
 }
 
 .navbar-container {
@@ -101,25 +150,77 @@
     top: 80px;
     left: -100%;
     transition: all 0.5s ease;
+    padding: 20px;
+    background-color: var(--bg);
   }
 
   .nav-menu.active {
-    background: #242222;
     left: 0;
   }
 
   .nav-links {
+    text-decoration: none;
+    color: var(--text);
+    font-weight: 500;
+  }
+
+  .nav-item {
     text-align: center;
     padding: 2rem;
     width: 100%;
     display: table;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    border: none;
+    will-change: transform;
+
+    &::before {
+      border-radius: 8px;
+      content: '';
+      position: absolute;
+      top: 10px;
+      right: 0;
+      bottom: -6px;
+      left: 0;
+      z-index: -1;
+    }
+    &::after {
+      content: '';
+      border-radius: 8px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+    }
   }
 
-  .nav-links:hover {
-    background-color: rgb(0, 0, 0);
-    color: #242424;
-    border-radius: 0;
-    border-bottom: none;
+  .nav-item:hover {
+    transform: translateY(2px);
+  }
+
+  .nav-item:hover:before {
+    transform: translateY(-2px);
+  }
+
+  .nav-item:active {
+    transform: translateY(8px);
+    transition: none;
+  }
+  .nav-item:active:before {
+    transform: translateY(-8px);
+    transition: none;
+  }
+
+  .nav-item {
+    &::before {
+      background-color: var(--grey--before);
+    }
+    &::after {
+      background-color: var(--grey--after);
+    }
   }
 
   .menu-icon {
