--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -25,12 +25,34 @@ $inner-shadow: inset 0.2rem 0.2rem 0.5rem $greyLight-2,
   margin: 5px;
 }
 
-.check:checked + .icon-theme,
-.icon-theme:hover {
-  box-shadow: $inner-shadow;
-  background-color: $white;
-}
-
 .check {
   display: none;
+}
+
+/*.btn:focus,*/
+.toggle:hover {
+  transform: translateY(2px);
+}
+
+/*.btn:focus:before,*/
+.toggle:hover:before {
+  transform: translateY(-2px);
+}
+
+.toggle:active {
+  transform: translateY(8px);
+  transition: none;
+}
+.toggle:active:before {
+  transform: translateY(-8px);
+  transition: none;
+}
+
+.toggle {
+  &::before {
+    background-color: var(--grey--before);
+  }
+  &::after {
+    background-color: var(--grey--after);
+  }
 }
