--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,38 +1,47 @@
 @import '../App/App.scss';
 
-$shadow: 0.3rem 0.3rem 0.6rem $greyLight-2, -0.2rem -0.2rem 0.5rem $white;
-$inner-shadow: inset 0.2rem 0.2rem 0.5rem $greyLight-2,
-  inset -0.2rem -0.2rem 0.5rem $white;
-
-.icon {
-  a {
-    text-decoration: none;
-    color: $black;
-  }
-
-  &-blog,
-  &-other {
-    width: 80px;
-    height: 2.5rem;
-    border-radius: 20px;
-    box-shadow: $shadow;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    background-color: $greyDark;
-    transition: all 0.9s ease;
-    font-weight: 400;
-  }
+.btn-container > a {
+  text-decoration: none;
 }
 
-.icon-blog > img {
+.btn {
+  text-align: center;
   width: 100%;
-  height: 100%;
-  margin: 5px;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  will-change: transform;
+  padding: 4px 20px;
+  color: var(--text);
+  font-weight: 500;
+
+  &::before {
+    border-radius: 8px;
+    content: '';
+    position: absolute;
+    top: 10px;
+    right: 0;
+    bottom: -6px;
+    left: 0;
+    z-index: -1;
+  }
+  &::after {
+    content: '';
+    border-radius: 8px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+  }
 }
 
-/*.btn:focus:before,*/
+.btn:hover {
+  transform: translateY(2px);
+}
+
 .btn:hover:before {
   transform: translateY(-2px);
 }
