--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,32 +1,43 @@
 @import '../App/App.scss';
 
-$shadow: 0.3rem 0.3rem 0.6rem $greyLight-2, -0.2rem -0.2rem 0.5rem $white;
-$inner-shadow: inset 0.2rem 0.2rem 0.5rem $greyLight-2,
-  inset -0.2rem -0.2rem 0.5rem $white;
-
-.icon {
-  &-theme {
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
-    box-shadow: $shadow;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    background-color: $greyDark;
-    transition: all 0.5s ease;
-  }
-}
-
-.icon-theme > img {
+.toggle > img {
   width: 100%;
   height: 100%;
-  margin: 5px;
 }
 
 .check {
   display: none;
+}
+
+.toggle {
+  text-align: center;
+  width: 100%;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  will-change: transform;
+
+  &::before {
+    border-radius: 8px;
+    content: '';
+    position: absolute;
+    top: 10px;
+    right: 0;
+    bottom: -6px;
+    left: 0;
+    z-index: -1;
+  }
+  &::after {
+    content: '';
+    border-radius: 8px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+  }
 }
 
 /*.btn:focus,*/
