--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -3,6 +3,7 @@
 .toggle > img {
   width: 100%;
   height: 100%;
+  padding: 5px;
 }
 
 .check {
@@ -17,6 +18,7 @@
   cursor: pointer;
   border: none;
   will-change: transform;
+  display: flex;
 
   &::before {
     border-radius: 8px;
