--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -146,6 +146,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100vh;
     position: absolute;
     top: 0;
     left: -100%;
