--- a/src/components/MobNavLink/MobNavLink.scss
+++ b/src/components/MobNavLink/MobNavLink.scss
@@ -1,6 +1,6 @@
 @import '../App/App.scss';
 
-.nav-link {
+.mob-nav-link {
   text-align: center;
   padding: 2rem;
   width: 100%;
@@ -42,24 +42,24 @@
   }
 }
 
-.nav-link:hover {
+.mob-nav-link:hover {
   transform: translateY(2px);
 }
 
-.nav-link:hover:before {
+.mob-nav-link:hover:before {
   transform: translateY(-2px);
 }
 
-.nav-link:active {
+.mob-nav-link:active {
   transform: translateY(8px);
   transition: none;
 }
-.nav-link:active:before {
+.mob-nav-link:active:before {
   transform: translateY(-8px);
   transition: none;
 }
 
-.nav-link {
+.mob-nav-link {
   &::before {
     background-color: var(--grey--before);
   }
