--- a/src/components/MobNavLink/MobNavLink.scss
+++ b/src/components/MobNavLink/MobNavLink.scss
@@ -50,11 +50,11 @@
   transform: translateY(-2px);
 }
 
-.mob-nav-link:active {
+.mob-nav-link.active {
   transform: translateY(8px);
   transition: none;
 }
-.mob-nav-link:active:before {
+.mob-nav-link.active:before {
   transform: translateY(-8px);
   transition: none;
 }
